--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -13,7 +13,7 @@
         ?>
 
         <!-- Le styles -->
-        <?php echo $this->headLink(array('rel' => 'icon', 'type' => 'image/gif', 'href' => $this->basePath() . '/img/favicon.gif'))
+        <?php echo $this->headLink(array('rel' => 'icon', 'type' => 'image/png', 'href' => $this->basePath() . '/img/favicon.png'))
                         ->prependStylesheet($this->basePath() . '/css/style.css')
                         ->prependStylesheet($this->basePath() . '/css/bootstrap-theme.min.css')
                         ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
