Change Url of VGR on footer

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -52,7 +52,7 @@
 	       	<div class="push"></div>
 	    </div>
             <footer class="footer text-center">
-            	2014 - Webdesign by Traperac - Special Thanks to <a href="http://vgr-fr.com">VGR admin Magicbart</a> for hosting this website
+            	2014 - Webdesign by Traperac - Special Thanks to <a href="http://www.video-games-records.com">Magicbart</a> for hosting this website
             	<br/>Credits : flags icons by <a href="www.icondrawer.com">icondrawer</a> - 
             	proofs icons by <a href="http://icons.mysitemyway.com/">icons.mysitemyway</a> - 
             	stars icons by <a href="https://www.iconfinder.com/">iconfinder</a>
